# solana-token

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  package.json  rust-toolchain.toml
.claude/skills/deploy-local/: SKILL.md
.claude/skills/deploy-local/scripts/: deploy.sh
.claude/skills/integration-tests/: SKILL.md
.claude/skills/integration-tests/scripts/: run-integration.sh
.claude/skills/unit-tests/: SKILL.md
.claude/skills/unit-tests/scripts/: run-unit.sh
cli/: .gitignore  Cargo.toml  README.md  build.rs
cli/src/: codegen.rs  lib.rs  main.rs
cli/tests/: generated_code_tests.rs  integration.rs
programs/solana-token/: Cargo.toml
programs/solana-token/src/: lib.rs
tests/: solana-token.ts  utils.ts
