[workspace]

[package]
name = "solana-token-cli"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
solana-token = { path = "../programs/solana-token" }
borsh = "0.10"
solana-sdk = "2"
solana-client = "2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
shellexpand = "3.1"
